# clustercute

./: .gitignore  .travis.yml  AUTHORS  LICENSE  README.md  clustercute.cabal  examplelist.txt  run.sh  stack.yaml
app/: Main.hs
src/: Lib.hs
