name:                clustercute
version:             0.1.0.0
synopsis:            Simple SSH password based executor
description:         Please see README.md
homepage:            http://github.com/bneijt/clustercute#readme
license:             GPL-3
license-file:        LICENSE
author:              Bram Neijt
maintainer:          bneijt@gmail.com
copyright:           GPL-3
category:            System Tools
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
--https://github.com/commercialhaskell/stack/issues/614
library
    hs-source-dirs:     src
    exposed-modules:    Lib
    build-depends:      base >= 4.7 && < 5
                      , libssh2
                      , parallel-io
                      , hslogger
    ghc-options:       -fPIC -fllvm
    default-language:   Haskell2010

executable clustercute-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -fllvm
  build-depends:        base
                        , clustercute
                        , optparse-applicative
  default-language:    Haskell2010

test-suite clustercute-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , clustercute
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fllvm
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bneijt/clustercute
